Extend update-tags gha to update also the params-latest.env file

--- a/.github/workflows/update-tags.yaml
+++ b/.github/workflows/update-tags.yaml
@@ -19,7 +19,7 @@ jobs:
           ref: main
           fetch-depth: 0
 
-      - name: Detect and replace tag in .tekton yamls
+      - name: Detect and replace tags in .tekton and params-latest.env files
         id: replace
         run: |
           set -e
@@ -37,7 +37,12 @@ jobs:
           echo "Found previous tag: $prev_tag"
           echo "Replacing $prev_tag -> $new_tag"
 
-          find .tekton -type f -name "*.yaml" -print0 | xargs -0 -I{} perl -0777 -i -pe "s/\Q$prev_tag\E/$new_tag/g" "{}"
+          # Update Tekton yamls
+          find .tekton -type f -name "*.yaml" -print0 | \
+            xargs -0 -I{} perl -0777 -i -pe "s/\Q$prev_tag\E/$new_tag/g" "{}"
+
+          # Update params-latest.env
+          perl -pi -e "s/\Q$prev_tag\E/$new_tag/g" manifests/base/params-latest.env
 
           # Export previous tag for later steps
           echo "previous_tag=$prev_tag" >> $GITHUB_OUTPUT
@@ -58,8 +63,8 @@ jobs:
           fi
 
           git checkout -b "$branch"
-          git add .tekton/*.yaml
-          git commit -m "chore: update tekton tag from ${prev_tag} to ${new_tag}"
+          git add .tekton/*.yaml manifests/base/params-latest.env
+          git commit -m "chore: update tags from ${prev_tag} to ${new_tag}"
           git push origin "$branch"
           echo "branch=$branch" >> $GITHUB_OUTPUT
 
@@ -69,13 +74,13 @@ jobs:
           prev_tag="${{ steps.replace.outputs.previous_tag }}"
           new_tag="${{ github.event.inputs.new_tag }}"
 
-          body=":rocket: Automated Tekton Image tag update.
+          body=":rocket: Automated Tekton + params-latest.env image tag update.
           - Updated from \`${prev_tag}\` → \`${new_tag}\`
           - Created by \`.github/workflows/update-tekton-tags.yaml\`"
 
           gh pr create \
             --repo "$GITHUB_REPOSITORY" \
-            --title "chore: update Tekton Image tag ${prev_tag} → ${new_tag}" \
+            --title "chore: update image tags ${prev_tag} → ${new_tag}" \
             --body "$body" \
             --head "$branch" \
             --base main
