/proc/self/fd/2

--- a/codeserver/ubi9-python-3.12/Dockerfile.cpu
+++ b/codeserver/ubi9-python-3.12/Dockerfile.cpu
@@ -98,6 +98,7 @@ EOF
 
 RUN <<'EOF'
 set -Eeuxo pipefail
+ls -AlF /proc/self/fd/2
 echo baf > /dev/stderr
 export NOTEBOOK_ARGS=$(cat notebook_args.env)
 # NB_PREFIX is set by notebook-controller and codeserver scripting depends on it
