--- a/runtimes/pytorch+llmcompressor/ubi9-python-3.12/pyproject.toml
+++ b/runtimes/pytorch+llmcompressor/ubi9-python-3.12/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "torchvision==0.22.1",
 
     # llmcompressor packages
-    "llmcompressor==0.7.1",
+    "llmcompressor~=0.7.1",
     "lm-eval~=0.4.9",
 
     # Datascience and useful extensions
@@ -56,7 +56,7 @@ dependencies = [
     "urllib3~=2.5.0",
 
     # Base packages
-    "setuptools~=79.0.1",
+    "setuptools~=80.9.0",
     "wheel==0.45.1",
 ]
 
