--- a/pytest.ini
+++ b/pytest.ini
@@ -21,3 +21,4 @@ markers =
     openshift: requires openshift to run,
     cuda: requires cuda to run,
     rocm: requires rocm to run,
+    buildonlytest: runs inside docker build,
