enable missing module mod_mime.so

--- a/codeserver/ubi9-python-3.12/httpd/httpd.conf
+++ b/codeserver/ubi9-python-3.12/httpd/httpd.conf
@@ -5,6 +5,7 @@ Listen 8080
 # Load modules
 LoadModule mpm_prefork_module modules/mod_mpm_prefork.so
 LoadModule authz_core_module modules/mod_authz_core.so
+LoadModule mime_module modules/mod_mime.so
 LoadModule dir_module modules/mod_dir.so
 LoadModule cgi_module modules/mod_cgi.so
 LoadModule rewrite_module modules/mod_rewrite.so
@@ -38,4 +39,4 @@ ErrorLog "/var/log/httpd/error_log"
 LogLevel warn
 
 # Include additional configurations
-IncludeOptional conf.d/*.conf
+# IncludeOptional conf.d/*.conf
