--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -61,12 +61,15 @@ jobs:
 
       - uses: actions/checkout@v5
         if: ${{ fromJson(inputs.github).event_name != 'pull_request_target' }}
+        with:
+          lfs: ${{ contains(inputs.target, 'codeserver') }}
       # we need to checkout the pr branch, not pr target (the default for pull_request_target)
       # user access check is done in calling workflow
       - uses: actions/checkout@v5
         if: ${{ fromJson(inputs.github).event_name == 'pull_request_target' }}
         with:
           ref: "refs/pull/${{ fromJson(inputs.github).event.number }}/merge"
+          lfs: ${{ contains(inputs.target, 'codeserver') }}
 
       # https://github.com/docker/setup-qemu-action?tab=readme-ov-file#about
       # https://www.itix.fr/blog/qemu-user-static-with-podman/
