--- a/rstudio/rhel9-python-3.11/nginx/serverconf/proxy.conf.template
+++ b/rstudio/rhel9-python-3.11/nginx/serverconf/proxy.conf.template
@@ -6,17 +6,16 @@ rewrite ^/auth-sign-out(.*) "$custom_scheme://$http_host/rstudio/auth-sign-out$1
 ###############
 
 ###############
-# api calls from probes get to CGI processing
+# api calls from probes get to CGI processing via Apache
 ###############
 location /api/ {
-  index probe.cgi;
-  fastcgi_index probe.cgi;
+  proxy_pass http://localhost:8080;
+  proxy_set_header Host $host;
+  proxy_set_header X-Real-IP $remote_addr;
+  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header X-Forwarded-Proto $scheme;
   gzip off;
-  access_log  off;
-  root  /opt/app-root;
-  fastcgi_pass  unix:/var/run/fcgiwrap.socket;
-  include /etc/nginx/fastcgi_params;
-  fastcgi_param SCRIPT_FILENAME  /opt/app-root$fastcgi_script_name;
+  access_log off;
 }
 
 location = /api/kernels {
@@ -25,14 +24,23 @@ location = /api/kernels {
 }
 
 location /api/kernels/ {
-  index access.cgi;
-  fastcgi_index access.cgi;
-  gzip  off;
-  access_log    off;
-  root  /opt/app-root;
-  fastcgi_pass  unix:/var/run/fcgiwrap.socket;
-  include /etc/nginx/fastcgi_params;
-  fastcgi_param SCRIPT_FILENAME  /opt/app-root$fastcgi_script_name;
+  proxy_pass http://localhost:8080;
+  proxy_set_header Host $host;
+  proxy_set_header X-Real-IP $remote_addr;
+  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header X-Forwarded-Proto $scheme;
+  gzip off;
+  access_log off;
+}
+
+location = /api/probe {
+  proxy_pass http://localhost:8080;
+  proxy_set_header Host $host;
+  proxy_set_header X-Real-IP $remote_addr;
+  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header X-Forwarded-Proto $scheme;
+  gzip off;
+  access_log off;
 }
 ###############
 
