--- a/jupyter/trustyai/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/trustyai/ubi9-python-3.12/pyproject.toml
@@ -5,7 +5,7 @@ requires-python = "==3.12.*"
 
 dependencies = [
     # PyTorch packages
-    'torch==2.7.1+cu128',
+    "torch==2.7.1+cu128; platform_machine != 'ppc64le'",
 
     # TrustyAI packages
     # More information available at:
@@ -13,7 +13,7 @@ dependencies = [
     #   - https://github.com/trustyai-explainability/trustyai-explainability-python/blob/main/requirements.txt
     'transformers~=4.56.1',
     'datasets~=4.0.0',
-    'accelerate~=1.10.1',
+    "accelerate~=1.10.1; platform_machine != 'ppc64le'",
     'trustyai~=0.6.2',
     # Datascience and useful extensions
     'boto3~=1.40.27',
