--- a/.tekton/odh-base-image-cuda-12-8-py312-c9s-push.yaml
+++ b/.tekton/odh-base-image-cuda-12-8-py312-c9s-push.yaml
@@ -29,7 +29,7 @@ spec:
   - name: build-platforms
     value:
     - linux/x86_64
-    - linux/arm64
+    - linux-m2xlarge/arm64
   - name: path-context
     value: .
   - name: additional-tags
