Add `ninja-build` dependency for s390x and ppc64le in `ubi9-python-3.12` Dockerfile

--- a/runtimes/minimal/ubi9-python-3.12/Dockerfile.cpu
+++ b/runtimes/minimal/ubi9-python-3.12/Dockerfile.cpu
@@ -41,7 +41,7 @@ ARCH=$(uname -m)
 echo "Detected architecture: $ARCH"
 PACKAGES="perl mesa-libGL skopeo"
 if [ "$ARCH" = "s390x" ] || [ "$ARCH" = "ppc64le" ]; then
-    PACKAGES="$PACKAGES gcc g++ make openssl-devel autoconf automake libtool cmake"
+    PACKAGES="$PACKAGES gcc g++ ninja-build openssl-devel autoconf automake libtool cmake"
 fi
 dnf install -y --setopt=keepcache=1 $PACKAGES
 EOF
