--- a/manifests/base/jupyter-rocm-pytorch-notebook-imagestream.yaml
+++ b/manifests/base/jupyter-rocm-pytorch-notebook-imagestream.yaml
@@ -20,6 +20,7 @@ spec:
         # language=json
         opendatahub.io/notebook-software: |
           [
+            {"name": "ROCm", "version": "v6.4"},
             {"name": "Python", "version": "v3.12"},
             {"name": "ROCm-PyTorch", "version": "2.7"}
           ]
@@ -59,6 +60,7 @@ spec:
         # language=json
         opendatahub.io/notebook-software: |
           [
+            {"name": "ROCm", "version": "v6.2"},
             {"name": "Python", "version": "v3.11"},
             {"name": "ROCm-PyTorch", "version": "2.6"}
           ]
