--- a/manifests/base/jupyter-rocm-tensorflow-notebook-imagestream.yaml
+++ b/manifests/base/jupyter-rocm-tensorflow-notebook-imagestream.yaml
@@ -20,14 +20,15 @@ spec:
         # language=json
         opendatahub.io/notebook-software: |
           [
+            {"name": "ROCm", "version": "v6.4"},
             {"name": "Python", "version": "v3.12"},
-            {"name": "ROCm-TensorFlow", "version": "2.18"}
+            {"name": "TensorFlow-ROCm", "version": "2.18"}
           ]
         # language=json
         opendatahub.io/notebook-python-dependencies: |
           [
             {"name": "JupyterLab","version": "4.4"},
-            {"name": "ROCm-TensorFlow", "version": "2.18"},
+            {"name": "TensorFlow-ROCm", "version": "2.18"},
             {"name": "Tensorboard", "version": "2.18"},
             {"name": "Kafka-Python-ng", "version": "2.2"},
             {"name": "Matplotlib", "version": "3.10"},
@@ -58,14 +59,15 @@ spec:
         # language=json
         opendatahub.io/notebook-software: |
           [
+            {"name": "ROCm", "version": "v6.2"},
             {"name": "Python", "version": "v3.11"},
-            {"name": "ROCm-TensorFlow", "version": "2.14"}
+            {"name": "TensorFlow-ROCm", "version": "2.14"}
           ]
         # language=json
         opendatahub.io/notebook-python-dependencies: |
           [
             {"name": "JupyterLab","version": "4.4"},
-            {"name": "ROCm-TensorFlow", "version": "2.14"},
+            {"name": "TensorFlow-ROCm", "version": "2.14"},
             {"name": "Tensorboard", "version": "2.14"},
             {"name": "Kafka-Python-ng", "version": "2.2"},
             {"name": "Matplotlib", "version": "3.10"},
