--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -407,7 +407,7 @@ jobs:
           sudo kubeadm reset -f --cri-socket=unix:///var/run/crio/crio.sock
 
           # https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/create-cluster-kubeadm
-          sudo kubeadm init --config=ci/cached-builds/kubeadm.yaml --cri-socket=unix:///var/run/crio/crio.sock
+          sudo kubeadm init --config=ci/cached-builds/kubeadm.yaml
 
           mkdir -p $HOME/.kube
           sudo cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
@@ -417,6 +417,13 @@ jobs:
         if: ${{ failure() && steps.have-tests.outputs.tests == 'true' && steps.install-crio.outcome == 'success' }}
         run: |
           set -Eeuxo pipefail
+
+          # [kubelet-start] Writing kubelet environment file with flags to file "/var/lib/kubelet/kubeadm-flags.env"
+          sudo cat /var/lib/kubelet/kubeadm-flags.env || true
+          # [kubelet-start] Writing kubelet configuration to file "/var/lib/kubelet/config.yaml"
+          sudo cat /var/lib/kubelet/config.yaml || true
+
+          sudo systemctl cat kubelet.service || true
 
           sudo systemctl status kubelet || true
           sudo journalctl -xeu kubelet
