--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -318,7 +318,7 @@ jobs:
           #  [Service]
           #  EnvironmentFile=-/var/lib/kubelet/kubeadm-flags.env
           #  ExecStart=/usr/bin/kubelet $KUBELET_KUBEADM_ARGS
-          sudo add-apt-repository --remove 'deb https://packages.microsoft.com/ubuntu/24.04/prod noble main'
+          sudo add-apt-repository --remove 'deb https://packages.microsoft.com/ubuntu/24.04/prod noble InRelease'
 
           sudo apt-get update
           sudo apt-get install -y software-properties-common curl
